@@ -2,7 +2,8 @@ jagger Changelog
 ================
 
 x xxx xxx xx 2007 Release 1.1
-- Jagger now requires Groovy 1.1-RC-1 or 1.1-beta-2!
+- Jagger is tested with Groovy 1.1-RC-2 and will probably not work with
+  older versions
 
 - New command line interface for demon mode (jagger-demon)
 - Implemented JMX model / aggregation DSL
@@ -13,7 +14,7 @@ x xxx xxx xx 2007 Release 1.1
 
 - Added unit tests, fixed some bugs found by them
 - Made Tomcat and JSW optional (navel-gazing now possible)
-- Support for current "WrapperManager" object name
+- Support for current "WrapperManager" object name (reported by pero)
 
 =============================================================================
 * Fri Jul 27 2007 Release 1.0
